--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -47,7 +47,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icons8_print_50_uvQ_icon.ico</ApplicationIcon>
+    <ApplicationIcon>icons8_print_50_wiD_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icons8_print_50_uvQ_icon.ico" />
+    <Content Include="icons8_print_50_wiD_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
