Косметика в коде. Теперь можно вызывать свойства сервера печати (работает от Win8).

--- a/WindowsFormsApp1/PrinterHelper.csproj
+++ b/WindowsFormsApp1/PrinterHelper.csproj
@@ -89,6 +89,9 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cmd.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
