Добавлена работа с FRPO для Kyocera. Пока в тестовом варианте.

--- a/WindowsFormsApp1/PrinterHelper.csproj
+++ b/WindowsFormsApp1/PrinterHelper.csproj
@@ -84,9 +84,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Management" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cmd.cs">
@@ -98,16 +100,28 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frpogui.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frpogui.Designer.cs">
+      <DependentUpon>frpogui.cs</DependentUpon>
+    </Compile>
     <Compile Include="PrintTestPage.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendRawDataToPrinter.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SendFileToPrint.cs">
       <SubType>Form</SubType>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frpogui.resx">
+      <DependentUpon>frpogui.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
